<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MADelivery Restaurant</string>
    <string name="form_name">Restaurant name</string>
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>
    <string name="form_phone">Phone number</string>
    <string name="form_address">Address</string>
    <string name="form_info">Additional information</string>
    <string name="dialog_title">Select your food categories</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">Clear all</string>
    <string name="form_food_category_btn">Set food category</string>
    <string name="toast_checkbox_limit">Limit reached!!!</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="lunch_time">Lunch:time</string>
    <string name="delete">Delete</string>
    <string name="gallerypermission">Allow the Gallery usage in settings to use this funcionality.</string>
    <string name="camerapermission">Allow the camera usage in settings to use this funcionality.</string>

    <!--Food Categories-->
    <string-array name="food_categories">
        <item>Pizza</item>
        <item>Sandwiches</item>
        <item>Kebab</item>
        <item>Italian</item>
        <item>American</item>
        <item>Desserts</item>
        <item>Fry</item>
        <item>Vegetarian</item>
        <item>Asian</item>
        <item>Mediterranean</item>
        <item>South American</item>
    </string-array>

    <string name="title_activity_navigation_drawer">navigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="opening_hours">Opening hours</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="modify_hours">Edit hours</string>
    <string name="Closed">Closed</string>
    <string name="other_hours">Other hours</string>
    <string name="open_24h">Open 24h</string>
    <string name="order_price"> 19.99 €</string>


    <string name="dish_name">Dish name</string>
    <string name="dish_description">Description</string>
    <string name="available_quantity">Available quantity</string>
    <string name="dish_price">Price</string>
    <string name="edit_dish">Your dish</string>
    <string name="action_settings">Add Action</string>
    <string name="requiredString">Enter required fields</string>
    <string name="requiredPrice">Price cannot be zero.</string>
    <string name="availableQuantity">Available quantity:</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="minimum_order">Minimum Order</string>
    <string name="notification_text">A new order has arrived. Look at the reservation page to see it</string>

    <string name="daily_offer">Daily Offer</string>
    <string name="reservations">Reservations</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="analytics_title">Analytics</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="short_mon">Monday</string>
    <string name="short_tue">Tuesday</string>
    <string name="short_wed">Wednesday</string>
    <string name="short_thu">Thursday</string>
    <string name="short_fri">Friday</string>
    <string name="short_sat">Saturday</string>
    <string name="short_sun">Sunday</string>
    <string name="st">st</string>
    <string name="nd">nd</string>
    <string name="rd">rd</string>
    <string name="of">of</string>
    <string name="no_vendite">No sales detected in this time.</string>
    <string name="vendite">sales</string>
    <string name="choose_rider">Choose a rider</string>
    <string name="no_address">No Address setted</string>
    <string name="daily_offer_title">Daily offer</string>
    <string name="upload_failure">Upload Failure</string>
    <string name="pic_saved">Data Saved!</string>
    <string name="detreservation_title">Detailed Reservation</string>
    <string name="opening_hours_title">Opening hours</string>
    <string name="edit_fields">Edit fields</string>
    <string name="connection_error">Connection error.</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="history">History</string>
    <string name="no_rider">No rider available</string>
    <string name="analytics">Analytics</string>
    <string name="ordered_dishes">Ordered dishes</string>
    <string name="total">Total:</string>
    <string name="address_cart">Address:</string>
    <string name="launch_time_cart">Lunch time:</string>
    <string name="notes">Notes:</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="dish">Dish</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="top_meal">Top meal</string>
    <string name="timing_order">Timing of orders</string>
    <string name="th">th</string>
    <string name="restaurantRatingActivity">Reviews</string>
    <string name="yes">YES</string>
    <string name="msg_accept_dialog">Do you want to accept this order?</string>
    <string name="confirm_dialog_title">Are you sure?</string>
    <string name="dialog_callbiker_msg">Do you want to call a biker?</string>
    <string name="food_rating">Food Rating</string>
    <string name="restaurant_rating">Restaurant Rating</string>
    <string name="top_meal_day">of the day</string>
    <string name="top_meal_week">of the week</string>
    <string name="top_meal_month">of the month</string>
    <string name="refuse">Refuse</string>
    <string name="confirm">Confirm</string>
    <string name="call_rider">Call Rider</string>


    <string-array name="hours_list">
        <item>00:00</item>
        <item>00:15</item>
        <item>00:30</item>
        <item>00:45</item>
        <item>01:00</item>
        <item>01:15</item>
        <item>01:30</item>
        <item>01:45</item>
        <item>02:00</item>
        <item>02:15</item>
        <item>02:30</item>
        <item>02:45</item>
        <item>03:00</item>
        <item>03:15</item>
        <item>03:30</item>
        <item>03:45</item>
        <item>04:00</item>
        <item>04:15</item>
        <item>04:30</item>
        <item>04:45</item>
        <item>05:00</item>
        <item>05:15</item>
        <item>05:30</item>
        <item>05:45</item>
        <item>06:00</item>
        <item>06:15</item>
        <item>06:30</item>
        <item>06:45</item>
        <item>07:00</item>
        <item>07:15</item>
        <item>07:30</item>
        <item>07:45</item>
        <item>08:00</item>
        <item>08:15</item>
        <item>08:30</item>
        <item>08:45</item>
        <item>09:00</item>
        <item>09:15</item>
        <item>09:30</item>
        <item>09:45</item>
        <item>10:00</item>
        <item>10:15</item>
        <item>10:30</item>
        <item>10:45</item>
        <item>11:00</item>
        <item>11:15</item>
        <item>11:30</item>
        <item>11:45</item>
        <item>12:00</item>
        <item>12:15</item>
        <item>12:30</item>
        <item>12:45</item>
        <item>13:00</item>
        <item>13:15</item>
        <item>13:30</item>
        <item>13:45</item>
        <item>14:00</item>
        <item>14:15</item>
        <item>14:30</item>
        <item>14:45</item>
        <item>15:00</item>
        <item>15:15</item>
        <item>15:30</item>
        <item>15:45</item>
        <item>16:00</item>
        <item>16:15</item>
        <item>16:30</item>
        <item>16:45</item>
        <item>17:00</item>
        <item>17:15</item>
        <item>17:30</item>
        <item>17:45</item>
        <item>18:00</item>
        <item>18:15</item>
        <item>18:30</item>
        <item>18:45</item>
        <item>19:00</item>
        <item>19:15</item>
        <item>19:30</item>
        <item>19:45</item>
        <item>20:00</item>
        <item>20:15</item>
        <item>20:30</item>
        <item>20:45</item>
        <item>21:00</item>
        <item>21:15</item>
        <item>21:30</item>
        <item>21:45</item>
        <item>22:00</item>
        <item>22:15</item>
        <item>22:30</item>
        <item>22:45</item>
        <item>23:00</item>
        <item>23:15</item>
        <item>23:30</item>
        <item>23:45</item>
    </string-array>
</resources>