<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_daily_offer"
            android:icon="@drawable/ic_action_food"
            android:title="@string/daily_offer" />
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_action_order_food"
            android:title="@string/reservations" />
        <item
            android:id="@+id/nav_reviews"
            android:title="@string/restaurantRatingActivity"
            android:icon="@drawable/ic_nav_reviews"
            />
        <item
            android:id="@+id/nav_analytics"
            android:title="@string/analytics"
            android:icon="@drawable/ic_analytics"
            />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>


</menu>
