<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="6dp">

    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="15dp">

        <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold"
            android:maxWidth="300dp"/>

        <TextView
            android:id="@+id/lunch_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_address"
            android:layout_marginTop="3dp"
            android:text="@string/lunch_time"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/lunch_time"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:text="@string/order_price"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_price"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/refuseButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="40"
                android:text="@string/refuse"
                android:textAlignment="center"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeStepGranularity="2sp"
                android:textColor="#696969"
                android:backgroundTint="@color/mapbox_plugins_white"
                android:elevation="0dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirmButton"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="40"
                android:text="@string/confirm"
                android:backgroundTint="@color/colorAccent"
                android:textAlignment="center"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeStepGranularity="2sp"
                android:textColor="@color/mapbox_plugins_white"/>

        </LinearLayout>

        <!--<de.hdodenhof.circleimageview.CircleImageView-->
        <!--android:id="@+id/status_biker"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_centerInParent="true"-->
        <!--app:civ_border_width="0.5dp" />-->


    </RelativeLayout>

</androidx.cardview.widget.CardView>
