<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dialogDishToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <ImageButton
            android:id="@+id/dialogDismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel_white"
            android:background="@null"
            android:layout_marginEnd="8dp"/>



        <ImageButton
            android:id="@+id/dialogConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_confirm"
            android:background="@null"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_below="@id/dialogDishToolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/dishImage"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_dish"
            android:layout_gravity="center"
            android:paddingTop="8dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#ff3d3d3d"
            android:onClick="showPopup"
            />

        <EditText
            android:id="@+id/editDishName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:ems="10"
            android:hint="@string/dish_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editDishDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:ems="10"
            android:hint="@string/dish_description"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:maxLines="3"
            android:maxLength="100"/>

        <EditText
            android:id="@+id/editDishQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:ems="10"
            android:hint="@string/available_quantity"
            android:inputType="number" />

        <com.blackcat.currencyedittext.CurrencyEditText
            android:id="@+id/editPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:ems="10"
            android:hint="@string/dish_price"
            android:inputType="numberDecimal"
            app:decimal_digits="2"/>
    </LinearLayout>

</RelativeLayout>
